kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: flask-app
